cabal-version:      2.4
Name:               swap
Version:            1.0.0.0
Author:              Jin
Maintainer:          jbangbang1122@gmail.com
Build-Type:          Simple


library
  hs-source-dirs:      src
  exposed-modules:     Swap
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , base16-bytestring
                     , binary
                     , bech32
                     , containers
                     , bytestring
                     , data-default
                     , dlist                     
                     , freer-extras
                     , lens
                     , nonempty-containers
                     , playground-common
                     , plutus-contract
                     , plutus-chain-index
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , prettyprinter
                     , tagged
                     , text
                     , serialise
                     , cardano-api
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise